homepage/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: homepage
  namespace: homepage

spec:
  replicas: 1

  selector:
    matchLabels:
      app: homepage

  template:
    metadata:
      labels:
        app: homepage

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: homepage-config
              mountPath: /app/config

      volumes:
        - name: homepage-config
          persistentVolumeClaim:
            claimName: homepage-config
---
apiVersion: v1
kind: Service

metadata:
  name: homepage-lb
  namespace: homepage

spec:
  selector:
    app: homepage

  ports:
    - port: 80
      targetPort: 3000

  type: LoadBalancer
