homepage/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: homepage
  namespace: homepage

spec:
  replicas: 1

  selector:
    matchLabels:
      app: homepage

  template:
    metadata:
      labels:
        app: homepage

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: homepage-config
              mountPath: /app/config

      volumes:
        - name: homepage-config
          persistentVolumeClaim:
            claimName: homepage-config
---
apiVersion: v1
kind: Service

metadata:
  name: homepage
  namespace: homepage

spec:
  selector:
    app: homepage

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dash.vil.nbl.sh
      secretName: homepage-tls
  rules:
    - host: dash.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
