homepage/ingress.yml
---
apiVersion: v1
kind: Service

metadata:
  name: homepage
  namespace: homepage

spec:
  selector:
    app: homepage

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: acme-nbl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dash.vil.nbl.sh
      secretName: homepage-tls
  rules:
    - host: dash.vil.nbl.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
